# min_project_secure_python_web_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  bandit-report.json  debug_detailed.py  debug_register.py  debug_test.py  debug_users_me.py  demo_oauth2.py  direct_test.py  docker-compose.test.yml  docker-compose.yml  endpoint_test.py  env.example  init-db.sql  minimal_app_test.py  minimal_endpoint_test.py  minimal_test.py  nginx.conf  password_test.py  pip-audit-report.json  pyproject.toml  pytest.ini  registration_test.py  requirement.txt  requirements-dev.txt  requirements.txt  safety-report.json  schema_test.py  setup.cfg  simple_test.py  venv.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  code-quality.yml  security.yml
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  oauth2_service.py  schemas.py  security.py  security_utils.py
app/routers/: auth.py  oauth2_web.py  security.py  users.py
app/templates/: add_token.html  base.html  oauth2_dashboard.html  password_entry.html
config/: alembic.ini  mypy.ini  pytest.ini
data/: pip-audit-report.json
docs/: README.md  SECURITY.md
examples/: nginx.conf
requirements/: requirements-dev.txt  requirements.txt
scripts/: create_superuser.py  generate_ssl_cert.sh  setup.sh
tests/: conftest.py  test_security.py
tools/: demo_oauth2.py
